--- a/src/main/java/com/mareena/mediacatalogue/swing/view/ItemMediaView.form
+++ b/src/main/java/com/mareena/mediacatalogue/swing/view/ItemMediaView.form
@@ -66,7 +66,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Add Item"/>
+            <Property name="text" type="java.lang.String" value="Item Details"/>
           </Properties>
         </Component>
       </SubComponents>
